# haskellbook

./: Cipher.hs  Database.hs  Jam.hs  MTScotty.hs  adtexs.hs  adtexs2  adtexs2.hi  adtexs2.hs  backtracking.hs  badmonad.hs  eithermonad.hs  epmex.hs  eratos.hs  errorexs.hs  foldable.hs  foldexs.hs  fractions.hs  icanrecreateidentityT.hs  iniparser.hs  kleisli.hs  marshalling.hs  monad.hs  monadexs.hs  monadtrans.hs  monadtrans.hspp  montrexs.hs  parser1.hs  parserexs.hs  parserexs1.hs  parserexs2.hs  parserexs3.hs  parserexs4.hs  parserexs5.hs  parserfracs.hs  reader1.hs  reader2.hs  reader3.hs  readerexs.hs  scotty.hs  stackexs.hs  (+11 more)
addition/: Addition.hs  addition.cabal
applicative/: Apl1.hs  app.hs  badmonoid.hs
functor/: funcExs.hs  functor.cabal  js.hs  qcFunctor.hs  replaceExperiment.hs
hangman/: hangman.cabal
hangman/src/: Main.hs  tests.hs
monoid/: invalid.hs  madlibs.hs  monoid.cabal
monoid/src/: Main.hs
morse/: morse.cabal
morse/src/: Main.hs  Morse.hs
orphan-instance/: Listy.hi
tests/: tests.cabal
tests/.stack-work/install/x86_64-osx/lts-9.18/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHStests-0.1.0.0-8bowFEsfhh94EkuQX8mA2X-ghc8.0.2.dylib
tests/.stack-work/install/x86_64-osx/lts-9.18/8.0.2/lib/x86_64-osx-ghc-8.0.2/tests-0.1.0.0-8bowFEsfhh94EkuQX8mA2X/: QCTest.dyn_hi  WordNumberTest.dyn_hi  WordNumberTest.hi
tests/.stack-work/install/x86_64-osx/lts-9.18/8.0.2/pkgdb/: package.cache  tests-0.1.0.0-8bowFEsfhh94EkuQX8mA2X.conf
tests/src/: QCTest.hs  WordNumber.hs  WordNumberTest.hs
(+37 files in other folders)
