name:                tests
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tests#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
    exposed-modules: WordNumberTest, WordNumber, QCTest
    ghc-options: -Wall, -fwarn-tabs
    build-depends: base >= 4.7 && <5, containers, QuickCheck, hspec
    hs-source-dirs: src
    default-language: Haskell2010

--test-suite tests:
--    ghc-options:
--    type:
--    main-is:
--    hs-source-dirs:
--    build-depends:
--    default-language:
